# grooveproxy

./: .gitignore  LICENSE  README.md  benchmark.Dockerfile  benchmark_entrypoint.sh  docker-compose.yml  pyproject.toml  results.csv  results_load_test.csv  results_load_test_mimick.csv  setup.sh
.github/actions/: test.yml
.github/workflows/: groove.yml  test-benchmarks.yml  test-groove.yml  test-groovy.yml  test.yml
groove/: README.md  build.sh  controller.go  groove.Dockerfile  groove_entrypoint.sh  main.go  optimized_storage.go  recorder.go  run_test.py  setup.sh  utilities.go
groove/groove-node/: README.md  dialer.ts  esbuild-hook.js  index.ts  install-ca.ts  jest.config.js  package-lock.json  package.json  tape.ts  test_script.js  tsconfig.json  utilities.ts
groove/groove-node/lifecycle/: install.sh  uninstall.sh
groove/groove-node/scripts/: build.ts
groove/groove-node/src/: index.ts  install-ca.ts  proxy.ts  tape.ts
groove/groove-node/tests/: index.test.ts
groove/groove-python/: README.md  benchmark_end_proxy.py  build.py  cli.py  pyproject.toml
groove/groove-python/groove/: cli.py  dialer.py  enums.py  models.py  proxy.py  tape.py
groove/groove-python/groove/assets/: __init__.py
groove/groove-python/groove/tests/: conftest.py  mock_server.py  test_auth.py  test_cache.py  test_end_proxy.py  test_fingerprint.py  test_tape.py
groove/proxy/: archives.go  cache.go  cache_invalidator.go  cache_invalidator_test.go  cache_key.go  cache_key_test.go  cache_test.go  cert.go  controller.go  dialers.go  end_proxy.go  go.mod  go.sum  headers.go  main.go  optimized_storage.go  recorder.go  test_shared.go  transport.go  utilities.go  utilities_test.go
groove/proxy/cache/: invalidator.go  invalidator_test.go  lru.go  lru_test.go  utilities.go  utilities_test.go
groove/proxy/end_proxy/: end_proxy.go  go.mod  go.sum
proxy-benchmarks/: benchmark_entrypoint.sh  docker-compose.yml  results_certificate_speed.csv
proxy-benchmarks/proxy_benchmarks/: fingerprinting.py  load_test.py
proxy-benchmarks/proxy_benchmarks/assets/: __init__.py
proxy-benchmarks/proxy_benchmarks/assets/proxies/gomitmproxy/: go.sum
proxy-benchmarks/proxy_benchmarks/assets/proxies/gomitmproxy-mimic/: README.md  go.mod  go.sum
proxy-benchmarks/proxy_benchmarks/assets/proxies/goproxy-mimic/: cert.go  setup.sh
proxy-benchmarks/proxy_benchmarks/assets/proxies/martian/: go.sum  main.go
proxy-benchmarks/proxy_benchmarks/assets/proxies/mitmproxy/: setup.sh
proxy-benchmarks/proxy_benchmarks/cli/: load.py
proxy-benchmarks/proxy_benchmarks/proxies/: base.py  goproxy.py
proxy-benchmarks/proxy_benchmarks/tests/: test_fingerprinting.py  test_speed.py
proxy_benchmarks/: cli.py  enums.py  fingerprinting.py  io.py  load_test.py  networking.py  process.py  requests.py
proxy_benchmarks/assets/: __init__.py
proxy_benchmarks/assets/gomitmproxy/: go.mod  main.go
proxy_benchmarks/assets/goproxy/: LICENSE
proxy_benchmarks/assets/martian/: main.go  setup.sh
proxy_benchmarks/assets/node_http_proxy/: setup.js
proxy_benchmarks/assets/proxies/gomitmproxy/: go.mod  go.sum  main.go  setup.sh
proxy_benchmarks/assets/proxies/gomitmproxy-mimic/: go.mod  go.sum  main.go  setup.sh  transport.go
proxy_benchmarks/assets/proxies/goproxy/: go.mod  go.sum  main.go  setup.sh
proxy_benchmarks/assets/proxies/goproxy-mimic/: cert.go  go.mod  go.sum  main.go  setup.sh
proxy_benchmarks/assets/proxies/martian/: go.mod  setup.sh
proxy_benchmarks/assets/proxies/mitmproxy/: setup.sh
proxy_benchmarks/assets/proxies/node_http_proxy/: index.js  package.json  setup.js  setup.sh
proxy_benchmarks/assets/speed-test/locust/: README.md  http_baseline_locust.conf  http_locust.conf  https_baseline_locust.conf  https_locust.conf  no_proxy_load_locust.conf  no_proxy_load_test.py  proxy_load_test.py
proxy_benchmarks/assets/speed-test/server/: main.go  pyproject.toml  setup.sh
proxy_benchmarks/cli/: fingerprinting.py  load.py  main.py  speed.py  ssl_validity.py
proxy_benchmarks/proxies/: base.py  gomitmproxy.py  goproxy.py  martian.py  mitmproxy.py  node_http_proxy.py
proxy_benchmarks/tests/: conftest.py  test_fingerprinting.py  test_load.py  test_speed.py  test_ssl_validity.py
pure-node-test/: index.js  package-lock.json  package.json
speed-test-server/: go.mod  main.go  setup.sh
(+12 files in other folders)
