[tool.poetry]
name = "proxy-benchmarks"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
packages = [{include = "proxy_benchmarks"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyja3 = "^1.0.0"
psutil = "^5.9.2"
requests = "^2.28.1"
mitmproxy = "^8.1.1"
playwright = "^1.27.0"

[tool.poetry.scripts]
benchmark = "proxy_benchmarks.cli:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
