[tool.poetry]
name = "proxy-benchmarks"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
packages = [{include = "proxy_benchmarks"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyja3 = "^1.0.0"
psutil = "^5.9.2"
requests = "^2.28.1"
mitmproxy = "^8.1.1"
playwright = "^1.27.0"
rich = "^12.6.0"
locust = "^2.12.1"
ConfigArgParse = "^1.5.3"
pandas = "^1.5.0"
tqdm = "^4.64.1"

[tool.poetry.scripts]
benchmark = "proxy_benchmarks.cli.main:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 4
float_to_top = true
include_trailing_comma = true
known_first_party = "proxy_benchmarks"
extra_standard_library = "pkg_resources"
skip = "__init__.py"

line_length = 120
lines_after_imports = 2
multi_line_output = 3

[tool.pytest]
markers = """
    fingerprint: mark a test as a fingerprint test
    load: mark a test as a load test
    speed: mark a test as a speed test
    ssl: mark a test as an ssl test
"""
