[tool.poetry]
name = "groove"
version = "1.0.3"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
include = ["proxy"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pyhumps = "^3.8.0"


[tool.poetry.group.dev.dependencies]
playwright = "^1.27.1"
pytest = "^7.1.3"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
isort = "^5.10.1"
watchdog = "^2.1.9"

[tool.poetry.scripts]
install-ca = "groove.cli:install_ca"

[tool.poetry.build]
# Custom builder until Poetry expands their build plugin support: https://github.com/python-poetry/poetry/issues/2740
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
